up (drop project)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
             - uses: hyoo-ru/mam_build@master2
               with:
                   package: 'milis/ideag' #FIXME namespace of this package
-                  modules: 'app docs' #FIXME which modules to build, remove line if only on module at the root
+                  modules: 'app' #FIXME which modules to build, remove line if only on module at the root
 
             #FIXME remove one of the following
 
@@ -29,9 +29,3 @@ jobs:
               if: github.ref == 'refs/heads/master'
               with:
                   folder: 'milis/ideag/app/-' #FIXME path to build app
-
-            - uses: hyoo-ru/gh-deploy@v4.4.1
-              if: github.ref == 'refs/heads/master'
-              with:
-                  folder: 'milis/ideag/docs/-'
-                  target-folder: 'docs/' # Second sub-module
